# antigravity-telegram

./: .gitignore  README.md  auto_trigger.py  poll_prompts.py  pyproject.toml  start_bridge.sh
.agent/workflows/: run-telegram-bridge.md  telegram-agent.md
config/: mcp_config.json
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  handlers.py  keyboards.py  message_queue.py
src/mcp_server/: __init__.py  server.py  state.py  tools.py
src/monitors/: __init__.py  artifacts.py  tasks.py  terminal.py
src/utils/: __init__.py  formatting.py  project_manager.py  task_file.py
tests/: test_persistence.py
workflows/: mobile-command.md
